--- a/NanoProd/crab/Run3_2022/Higgs_CP.yaml
+++ b/NanoProd/crab/Run3_2022/Higgs_CP.yaml
@@ -3,13 +3,19 @@ config:
     sampleType: mc
     era: Run3_2022
 
+GluGluHTo2Tau_UncorrelatedDecay_CPodd_UnFiltered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-odd_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+GluGluHTo2Tau_UncorrelatedDecay_MM_UnFiltered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-mix_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+GluGluHTo2Tau_UncorrelatedDecay_SM_UnFiltered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-even_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
 ZHToTauTau_UncorrelatedDecay_UnFiltered: /ZHto2TauUncorrelatedDecay_M-125_CP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 GluGluHTo2Tau_UncorrelatedDecay_UnFiltered: /GluGluHTo2TauUncorrelatedDecay_M-125_CP5_13p6TeV_powheg-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 WplusHToTauTau_UncorrelatedDecay_UnFiltered: /WplusHTo2TauUncorrelatedDecay_M-125_TuneCP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 WminusHToTauTau_UncorrelatedDecay_UnFiltered: /WminusHTo2TauUncorrelatedDecay_M-125_TuneCP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 VBFHToTauTau_UncorrelatedDecay_UnFiltered: /VBFHTo2TauUncorrelatedDecay_M-125_TuneCP5_13p6TeV_powheg-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 
-#ZHToTauTau_UncorrelatedDecay_Filtered: Submitted
+GluGluHTo2Tau_UncorrelatedDecay_CPodd_Filtered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-odd_Filtered_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
+GluGluHTo2Tau_UncorrelatedDecay_MM_Filtered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-mix_Filtered_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+GluGluHTo2Tau_UncorrelatedDecay_SM_Filtered_ProdAndDecay: /GluGluHJJto2TauUncorrelatedDecay_CP-even_Filtered_M-125_CP5_13p6TeV_powheg-minlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
+ZHToTauTau_UncorrelatedDecay_Filtered: /ZHto2TauUncorrelatedDecay_Filtered_M-125_CP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM 
 GluGluHTo2Tau_UncorrelatedDecay_Filtered: /GluGluHTo2TauUncorrelatedDecay_Filtered_M-125_CP5_13p6TeV_powheg-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 WplusHToTauTau_UncorrelatedDecay_Filtered: /WplusHTo2TauUncorrelatedDecay_Filtered_M-125_TuneCP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
 WminusHToTauTau_UncorrelatedDecay_Filtered: /WminusHTo2TauUncorrelatedDecay_Filtered_M-125_TuneCP5_13p6TeV_powheg-minnlo-pythia8/Run3Summer22MiniAODv4-130X_mcRun3_2022_realistic_v5-v2/MINIAODSIM
